--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell-react-express",
+  "name": "react-express",
   "version": "1.0.0",
   "description": "Shell for React/Express combined app",
   "main": "server.js",
