--- a/server-express/.env.example
+++ b/server-express/.env.example
@@ -1,12 +1,10 @@
-PORT=8000
 ## All these appear as process.env.xxxxxx
 ## copy this file to .env before running
+PORT=8000
 
 # Use these if using a postgres db
 DB_HOST=localhost
-DB_USER=demo
+DB_USER=labber
 DB_PASS=123
-DB_NAME=demo
+DB_NAME=final
 DB_PORT=5432
-# Uncomment and set to true for Heroku
-# DB_SSL=true if heroku
