--- a/server-express/package.json
+++ b/server-express/package.json
@@ -8,13 +8,14 @@
     "local": "nodemon src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gary V Jipp",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   }
 }
