--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:client": "cd client-react && npm run build",
     "install": "(npm run install:server) && (npm run install:client)",
     "build": "npm run build:client",
-    "deploy": "mv -f client-react/build/ ./public"
+    "deploy": "mv -f client-react/build/ ./_public"
   },
   "repository": {
     "type": "git",
