--- a/client-react/package.json
+++ b/client-react/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "deno-react",
+  "name": "demo-react",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "homepage": ".",
-  "proxy": "http://localhost:8080",
+  "private": true,
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.3.1",
     "react": "^18.2.0",
