--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "(cd server-express && npm start);",
+    "local": "(cd server-express && npm run local);",
     "install:server": "cd server-express && npm install",
     "install:client": "cd client-react && npm install",
     "build:client": "cd client-react && npm run build",
