--- a/client-react/package.json
+++ b/client-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@types/react": "^18.2.0",
     "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,5 +31,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
